unpackaged/main/default/objects/Plant_Product_Transaction__c/fields/Subscription_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Start_Date__c</fullName>
    <label>Subscription Start Date</label>
    <type>Date</type>
</CustomField>