unpackaged/main/default/objects/Plant_Product_Transaction__c/fields/Subscription_Status__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Status__c</fullName>
    <formula>IF(  ISPICKVAL(Status__c, &#39;Contracted&#39;), &#39;Subscribed&#39;, &#39;Prospect&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subscription Status</label>
    <type>Text</type>
</CustomField>