unpackaged/main/default/objects/Plant_Product_Transaction__c/fields/Test_Temp_Date__c.field-meta.xml
<CustomField>
    <fullName>Test_Temp_Date__c</fullName>
    <formula>(End_Date__c -  Effective_Date__c)/365</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Test Temp Date</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>