unpackaged/main/default/objects/Plant_Product_Transaction__c/fields/Trial__c.field-meta.xml
<CustomField>
    <fullName>Trial__c</fullName>
    <formula>Quote__r.Trial__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trial</label>
    <type>Checkbox</type>
</CustomField>