unpackaged/main/default/objects/Plant_Product_Transaction__c/fields/Unit_Price_After_Volume_Discount__c.field-meta.xml
<CustomField>
    <fullName>Unit_Price_After_Volume_Discount__c</fullName>
    <description>This is the Unit Price after Software Discount Tier or Implementation Bracket pricing is applied to Contracted Price or List Price</description>
    <inlineHelpText>This is the Unit Price after Software Discount Tier or Implementation Bracket pricing is applied to Contracted Price or List Price</inlineHelpText>
    <label>Unit Price After Volume Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>