unpackaged/main/default/objects/Plant_Product_Transaction__c/fields/UoM__c.field-meta.xml
<CustomField>
    <fullName>UoM__c</fullName>
    <formula>TEXT(Product__r.QuantityUnitOfMeasure)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UoM</label>
    <type>Text</type>
</CustomField>