unpackaged/main/default/objects/Plant_Product_Transaction__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Plant__c</columns>
    <columns>Product__c</columns>
    <columns>Net_Unit_Price__c</columns>
    <columns>Discount_Tier__c</columns>
    <columns>Quote_Line__c</columns>
    <columns>Subscription__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>